2013-09-21  Holger Seelig  <holger.seelig@yahoo.de>

	* Makefile.am:
	* style.css:
	* BrowserWindow.h:
	* OutlineTree.h:
	* OutlineEditor.h:
	* ViewpointList.h:
	* OutlineTreeView.h:
	* OutlineSelection.h:
	* OutlineTreeModel.h:
	* OutlineTreeView.cpp:
	* OutlineTreeModel.cpp:
	* X3DOutlineTreeView.h:
	* OutlineSelection.cpp:
	* X3DOutlineTreeView.cpp:
	* OutlineTreeViewEditor.h:
	* OutlineTreeViewEditor.cpp: 

2013-09-21  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.cpp:
	* X3DBrowserEditor.h:
	* X3DBrowserEditor.cpp:
	* OutlineTreeView.h:
	* OutlineTreeView.cpp: 

2013-09-21  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.ui:
	* X3DBrowserWindowInterface.h:
	* X3DBrowserWindowInterface.cpp: 

2013-09-20  Holger Seelig  <holger.seelig@yahoo.de>

	* main.cpp: 

2013-09-20  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.h:
	* BrowserWindow.cpp:
	* OutlineTree.h:
	* OutlineTreeView.h:
	* OutlineUserData.h:
	* OutlineTreeData.h:
	* OutlineTreeView.cpp: 

2013-09-20  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.cpp:
	* X3DBrowserEditor.h:
	* X3DBrowserEditor.cpp:
	* OutlineTreeView.cpp: 

2013-09-18  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBrowserEditor.h:
	* X3DBrowserEditor.cpp: 

2013-09-18  Holger Seelig  <holger.seelig@yahoo.de>

	* Makefile.am:
	* BrowserWindow.h:
	* Rotor.wrl:
	* BrowserWindow.cpp:
	* BrowserWindow.ui:
	* X3DBrowserWindow.h:
	* home.wrl:
	* X3DBrowserWidget.h:
	* X3DBrowserEditor.h:
	* X3DBrowserEditor.cpp:
	* X3DBrowserWindow.cpp:
	* X3DBrowserWidget.cpp:
	* OutlineTreeView.h:
	* OutlineSelection.h:
	* OutlineTreeView.cpp:
	* OutlineSelection.cpp:
	* MotionBlurEditor.h:
	* X3DBrowserWindowInterface.h:
	* X3DBrowserWindowInterface.cpp: 

2013-09-17  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineTreeView.cpp: 

2013-09-17  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.cpp:
	* OutlineTreeView.h:
	* OutlineUserData.h:
	* OutlineTreeView.cpp: 
