@@ -1,5 +1,13 @@
 2013-09-21  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* BrowserWindow.h:
+	* BrowserWindow.cpp:
+	* X3DBrowserWidget.cpp:
+	* OutlineTreeViewEditor.h:
+	* OutlineTreeViewEditor.cpp: 
+
+2013-09-21  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* Makefile.am:
 	* style.css:
 	* BrowserWindow.h:
